Improve titles on figures in output plots

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -186,9 +186,10 @@ In the figures below, the thick red line is the posterior median value each year
 
 ```{r abundance-data-fits, fig.width = 3, fig.height = 5}
 par(mfcol = c(3,1), oma = c(1.5,1.5,0,0))
-plot_tseries(post_summ(post, "^Pa[.+,1]$"), jags_data$Pa_obs[observable,1], main = "Fall Trap Abundance")
-plot_tseries(post_summ(post, "^Mb[.+,2,1]$"), jags_data$Mb_obs[observable,2,1], main = "Spring Trap Abundance")
-plot_tseries(post_summ(post, "^Ra_tot["), jags_data$Ra_obs[observable], main = "Weir Abundance")
+plot_tseries(post_summ(post, "^Pa[.+,1]$"), jags_data$Pa_obs[observable,1], main = TeX("$Fall\\,Parr\\,Abundance\\,(At\\,Trap)$"))
+plot_tseries(post_summ(post, "^Mb[.+,2,1]$"), jags_data$Mb_obs[observable,2,1], main = TeX("$Spring\\,Smolt\\,Abundance\\,(At\\,Trap)$"))
+plot_tseries(post_summ(post, "^Ra_tot["), jags_data$Ra_obs[observable], main = TeX("$Adult\\,Return\\,Abundance$"))
+
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Abundance")
 ```
@@ -197,13 +198,12 @@ mtext(side = 2, outer = T, line = 0.25, "Abundance")
 
 ```{r survival-data-fits, fig.width = 5, fig.height = 6}
 par(mfcol = c(3,2), oma = c(1.5,1.5,0,0))
-
-plot_tseries(post_summ(post, "^phi_Pb_Ma["), expit(jags_data$Lphi_obs_Pb_Ma[observable]), main = "(Nat) Summer Tagging to LGD")
-plot_tseries(post_summ(post, "^phi_Pa_Ma[.+,1]$"), expit(jags_data$Lphi_obs_Pa_Ma[observable,1]), main = "(Nat) Fall Trap to LGD")
-plot_tseries(post_summ(post, "^phi_Mb_Ma[.+,2,1]$"), expit(jags_data$Lphi_obs_Mb_Ma[observable,2,1]), main = "(Nat) Spring Trap to LGD")
-plot_tseries(post_summ(post, "^phi_Mb_Ma[.+,2,2]$"), expit(jags_data$Lphi_obs_Mb_Ma[observable,2,2]), main = "(Hat) Spring Release to LGD")
-plot_tseries(post_summ(post, "^phi_Ma_M[.+,1]$"), expit(jags_data$Lphi_obs_Ma_M[observable,1]), main = "(Nat) LGD to BON")
-plot_tseries(post_summ(post, "^phi_Ma_M[.+,2]$"), expit(jags_data$Lphi_obs_Ma_M[observable,2]), main = "(Hat) LGD to BON")
+plot_tseries(post_summ(post, "^phi_Pb_Ma["), expit(jags_data$Lphi_obs_Pb_Ma[observable]), main = TeX("$Summer\\,Parr \\rightarrow LGR"))
+plot_tseries(post_summ(post, "^phi_Pa_Ma[.+,1]$"), expit(jags_data$Lphi_obs_Pa_Ma[observable,1]), main = TeX("$Fall\\,Parr \\rightarrow LGR"))
+plot_tseries(post_summ(post, "^phi_Mb_Ma[.+,2,1]$"), expit(jags_data$Lphi_obs_Mb_Ma[observable,2,1]), main = TeX("$Spring\\,Smolt \\rightarrow LGR\\,(NOR)"))
+plot_tseries(post_summ(post, "^phi_Mb_Ma[.+,2,2]$"), expit(jags_data$Lphi_obs_Mb_Ma[observable,2,2]), main = TeX("$Spring\\,Smolt \\rightarrow LGR\\,(HOR)"))
+plot_tseries(post_summ(post, "^phi_Ma_M[.+,1]$"), expit(jags_data$Lphi_obs_Ma_M[observable,1]), main = TeX("$LGR\\,Smolt \\rightarrow BON\\,(NOR)"))
+plot_tseries(post_summ(post, "^phi_Ma_M[.+,2]$"), expit(jags_data$Lphi_obs_Ma_M[observable,2]), main = TeX("$LGR\\,Smolt \\rightarrow BON\\,(HOR)"))
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
@@ -218,19 +218,19 @@ Within a single year, the values across all panels sum to one.
 # calculate observed q
 q_obs = t(apply(jags_data$weir_x_obs, 1, function(y) y/sum(y)))
 
-par(mfcol = c(3,4), oma = c(1.5,1.5,0,0))
-plot_tseries(post_summ(post, "^q_Ra[.+,1]$"), q_obs[observable,1], main = "Nat. Female Age 3")
-plot_tseries(post_summ(post, "^q_Ra[.+,2]$"), q_obs[observable,2], main = "Nat. Female Age 4")
-plot_tseries(post_summ(post, "^q_Ra[.+,3]$"), q_obs[observable,3], main = "Nat. Female Age 5")
-plot_tseries(post_summ(post, "^q_Ra[.+,4]$"), q_obs[observable,4], main = "Nat. Male Age 3")
-plot_tseries(post_summ(post, "^q_Ra[.+,5]$"), q_obs[observable,5], main = "Nat. Male Age 4")
-plot_tseries(post_summ(post, "^q_Ra[.+,6]$"), q_obs[observable,6], main = "Nat. Male Age 5")
-plot_tseries(post_summ(post, "^q_Ra[.+,7]$"), q_obs[observable,7], main = "Hat. Female Age 3")
-plot_tseries(post_summ(post, "^q_Ra[.+,8]$"), q_obs[observable,8], main = "Hat. Female Age 4")
-plot_tseries(post_summ(post, "^q_Ra[.+,9]$"), q_obs[observable,9], main = "Hat. Female Age 5")
-plot_tseries(post_summ(post, "^q_Ra[.+,10]$"), q_obs[observable,10], main = "Hat. Male Age 3")
-plot_tseries(post_summ(post, "^q_Ra[.+,11]$"), q_obs[observable,11], main = "Hat. Male Age 4")
-plot_tseries(post_summ(post, "^q_Ra[.+,12]$"), q_obs[observable,12], main = "Hat. Male Age 5")
+par(mfcol = c(3,4), oma = c(1.5,1.5,0,0))#, mar = c(1.5,1.5,1.5,0.5))
+plot_tseries(post_summ(post, "^q_Ra[.+,1]$"), q_obs[observable,1], main = TeX("$Female\\,Age\\,3\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,2]$"), q_obs[observable,2], main = TeX("$Female\\,Age\\,4\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,3]$"), q_obs[observable,3], main = TeX("$Female\\,Age\\,5\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,4]$"), q_obs[observable,4], main = TeX("$Male\\,Age\\,3\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,5]$"), q_obs[observable,5], main = TeX("$Male\\,Age\\,4\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,6]$"), q_obs[observable,6], main = TeX("$Male\\,Age\\,5\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,7]$"), q_obs[observable,7], main = TeX("$Female\\,Age\\,3\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,8]$"), q_obs[observable,8], main = TeX("$Female\\,Age\\,4\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,9]$"), q_obs[observable,9], main = TeX("$Female\\,Age\\,5\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,10]$"), q_obs[observable,10], main = TeX("$Male\\,Age\\,3\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,11]$"), q_obs[observable,11], main = TeX("$Male\\,Age\\,4\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Ra[.+,12]$"), q_obs[observable,12], main = TeX("$Male\\,Age\\,5\\,(HOR)$"))
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 ```
@@ -242,18 +242,18 @@ mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 q_obs = t(apply(jags_data$carc_x_obs, 1, function(y) y/sum(y)))
 
 par(mfcol = c(3,4), oma = c(1.5,1.5,0,0))
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,1]$"), q_obs[observable,1], main = "Nat. Female Age 3")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,2]$"), q_obs[observable,2], main = "Nat. Female Age 4")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,3]$"), q_obs[observable,3], main = "Nat. Female Age 5")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,4]$"), q_obs[observable,4], main = "Nat. Male Age 3")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,5]$"), q_obs[observable,5], main = "Nat. Male Age 4")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,6]$"), q_obs[observable,6], main = "Nat. Male Age 5")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,7]$"), q_obs[observable,7], main = "Hat. Female Age 3")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,8]$"), q_obs[observable,8], main = "Hat. Female Age 4")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,9]$"), q_obs[observable,9], main = "Hat. Female Age 5")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,10]$"), q_obs[observable,10], main = "Hat. Male Age 3")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,11]$"), q_obs[observable,11], main = "Hat. Male Age 4")
-plot_tseries(post_summ(post, "^q_Sa_adj[.+,12]$"), q_obs[observable,12], main = "Hat. Male Age 5")
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,1]$"), q_obs[observable,1], main = TeX("$Female\\,Age\\,3\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,2]$"), q_obs[observable,2], main = TeX("$Female\\,Age\\,4\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,3]$"), q_obs[observable,3], main = TeX("$Female\\,Age\\,5\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,4]$"), q_obs[observable,4], main = TeX("$Male\\,Age\\,3\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,5]$"), q_obs[observable,5], main = TeX("$Male\\,Age\\,4\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,6]$"), q_obs[observable,6], main = TeX("$Male\\,Age\\,5\\,(NOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,7]$"), q_obs[observable,7], main = TeX("$Female\\,Age\\,3\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,8]$"), q_obs[observable,8], main = TeX("$Female\\,Age\\,4\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,9]$"), q_obs[observable,9], main = TeX("$Female\\,Age\\,5\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,10]$"), q_obs[observable,10], main = TeX("$Male\\,Age\\,3\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,11]$"), q_obs[observable,11], main = TeX("$Male\\,Age\\,4\\,(HOR)$"))
+plot_tseries(post_summ(post, "^q_Sa_adj[.+,12]$"), q_obs[observable,12], main = TeX("$Male\\,Age\\,5\\,(HOR)$"))
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 ```
@@ -529,15 +529,15 @@ mtext(side = 2, outer = T, line = 0, "Number of Strays")
 
 # Ocean Survival
 
-```{r ocean-surv-plots, fig.width = 4, fig.height = 6}
-par(mfrow = c(3,2), oma = c(1,1,0,0))
-plot_tseries(post_summ(post, "phi_M_O1[.+,1]$"), main = "BON -> O1 (Nat)", yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_M_O1[.+,2]$"), main = "BON -> O1 (Hat)", yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O1_O2[.+,1]$"), main = "O1 -> O2 (Nat)", yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O1_O2[.+,2]$"), main = "O1 -> O2 (Hat)", yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O2_O3[.+,1]$")[,2:(length(observable)+1)], main = "O2 -> O3 (Nat)", yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-plot_tseries(post_summ(post, "phi_O2_O3[.+,2]$")[,2:(length(observable)+1)], main = "O2 -> O3 (Hat)", yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
-mtext(side = 1, outer = T, line = -0.5, "Brood Year")
+```{r ocean-surv-plots, fig.width = 6, fig.height = 5}
+par(mfrow = c(3,2), oma = c(1.5,1.5,0,0))
+plot_tseries(post_summ(post, "phi_M_O1[.+,1]$"), main = TeX("$O_0 \\rightarrow O_1\\,(NOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
+plot_tseries(post_summ(post, "phi_M_O1[.+,2]$"), main = TeX("$O_0 \\rightarrow O_1\\,(HOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
+plot_tseries(post_summ(post, "phi_O1_O2[.+,1]$"), main = TeX("$O_1 \\rightarrow O_2\\,(NOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
+plot_tseries(post_summ(post, "phi_O1_O2[.+,2]$"), main = TeX("$O_1 \\rightarrow O_2\\,(HOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
+plot_tseries(post_summ(post, "phi_O2_O3[.+,1]$")[,2:(length(observable)+1)], main = TeX("$O_2 \\rightarrow O_3\\,(NOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
+plot_tseries(post_summ(post, "phi_O2_O3[.+,2]$")[,2:(length(observable)+1)], main = TeX("$O_2 \\rightarrow O_3\\,(HOR)$"), yrs = as.numeric(rownames(jags_data$Pa_obs)[observable]), ylim = c(0,1))
+mtext(side = 1, outer = T, line = 0.5, "Brood Year")
 mtext(side = 2, outer = T, line = 0, "Survival")
 ```
 
