Add summaries for AR(1) coefficients to output plots

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -675,6 +675,12 @@ kable(tab) %>%
   column_spec(1, bold = T)
 ```
 
+## AR(1) Coefficients
+
+```{r}
+post_summ(post, "kappa", Rhat = TRUE, neff = TRUE, digits = 3)
+```
+
 # JAGS Model and Data {.tabset .tabset-pills}
 
 ## JAGS Model Code
