--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Output Summary"
-subtitle: "`r c('CAT' = 'Catherine Creek', 'LOS' = 'Lostine', 'UGR' = 'Upper Grande Ronde')[params$pop]`"
+subtitle: "`r c('CAT' = 'Catherine Creek', 'LOS' = 'Lostine', 'MIN' = 'Minam', 'UGR' = 'Upper Grande Ronde')[params$pop]`"
 output: 
   html_document:
     toc: true
@@ -104,7 +104,7 @@ diag_params = list(
   c("^sig_Lomega", "^sig_Lpi"),
   "^Pb[", 
   "init_recruits", 
-  "^phi_Ma_M", "^phi_Mb_Ma[.+,2]", "^phi_Pa_Mb[.+,1]", "^phi_Pa_Mb[.+,2]",
+  "^phi_Ma_O0", "^phi_Mb_Ma[.+,2]", "^phi_Pa_Mb[.+,1]", "^phi_Pa_Mb[.+,2]",
   "^phi_O0_O1", "^phi_O1_O2", "^phi_O2_O3",
   "^psi_O1_Rb", "^psi_O2_Rb", "O_phi_scaler_nat_hat"
 )
@@ -294,7 +294,7 @@ All red components are posterior summaries (medians and 95% credible intervals).
 bh_params = post_subset(post, c("alpha", "beta"), matrix = T)
 
 # extract posterior summaries of total spawners by brood year
-Sa_tot = post_summ(post, "Sa_tot")
+Sa_tot = post_summ(post, "^Sa_tot[")
 
 # extract posterior summaries of total parr recruits by brood year
 Pb = post_summ(post, "^Pb[")
