Introduce a new framework for easily accessing specific posterior summaries
The indexing in the model gets quite complex in some areas. Take returns to the estuary by year, age, sex, origin, and population: Rb[y,k,s,o,j]. If we wish to extract the posterior summary of all age 4 natural origin males for UGR, we would write: post_summ(post, "Rb[.+,2,2,1,4]"). This is confusing to read and edit when copying and pasting to summarize a similar quantity but for a different combo of age/sex/origin/population.

This commit introduces the function `sub_index()`, which makes this task much easier. Coupled with objects that define what index number correspond to which feature (e.g., k_3 = 1 means that k corresponding to age 3 is 1), we can now write:

post_summ(post, sub_index("Ra[year,age,sex,origin,pop]", year = ".+", age = k_4, sex = s_male, origin = o_nor, pop = j_ugr))

To perform the same task. sub_index() substitutes the correct index values for the placeholders and makes it much easier to edit which dimensions to summarize.

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -46,6 +46,26 @@ all_yrs = as.numeric(dimnames(jags_data$Pa_obs)[[1]])
 observable = (jags_data$kmax+1):jags_data$ny
 ```
 
+```{r dimension-ids}
+# population names
+pops = colnames(jags_data$Ra_obs)
+
+# dimension IDs
+i_fall   = 1  # fall migrants are i = 1
+i_spring = 2  # spring migrants are i = 2,
+o_nor    = 1  # natural origin are o = 1,
+o_hor    = 2  # hatchery origin are o = 2,
+s_female = 1  # females are s = 1,
+s_male   = 2  # males are s = 2
+j_cat    = 1  # Catherine Creek is j = 1
+j_los    = 2  # Lostine River is j = 2
+j_min    = 3  # Minam River is j = 3
+j_ugr    = 4  # Upper Grande Ronde River is j = 4
+k_3      = 1  # age 3 is k = 1
+k_4      = 2  # age 4 is k = 2
+k_5      = 3  # age 5 is k = 3
+```
+
 The code used to render this output relies heavily on Staton's 'postpack' package (now available on CRAN). Take a look at [this vignette](https://bstaton1.github.io/postpack/articles/feature-overview.html) for a primer on how to use it.
 
 # MCMC Information {.tabset .tabset-pills}
