--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -127,108 +127,273 @@ kable(df, format.args = list(big.mark = ",")) %>%
 
 ## Diagnostic Summaries
 
-This table shows the number of parameters that fail to meet some diagnostic threshold. Lower Rhat values are good, larger Neff values are good, and lower MCMC SE/Mean values are good.
+```{r mcmc-diag-function}
+# a function to get MCMC diagnoses for a group of parameters
+# params: a string to match with postpack::match_params()
+# L1: a "Level-1" group label; such as component of the model (e.g., LH apportionment)
+# L2: a "Level-2" group label; such as type of parameter (e.g., mean, sd, or year-specific value)
+# L3: a "Level-3" group label; such as NOR or females or age-3 females
 
-The "match" column shows the kinds of parameters summarized in that row. E.g., `^mu_phi` covers all parameter names that start with `mu_phi` and are followed by anything else (`r paste(match_params(post, "^mu_phi"), collapse = ", ")`).
 
-This model was ran for a very short time, and I'm impressed with how well the sampling performed even considering this.
+diag_fn = function(params, L1 = NA, L2 = NA, L3 = NA) {
+  
+  # extract the posteriors of interest and format for 'posterior' package
+  post_sub = as_draws_df(post_subset(post, params))
 
-```{r mcmc-diags}
-# groups of parameters to match and calculate diagnostic summaries for separately
-diag_params = list(
-  c("alpha", "beta", "sigma_Pb"),
-  "gamma",
-  "^mu_phi",
-  "^mu_psi",
-  "^mu_omega",
-  "^mu_pi",
-  "^sig_Lphi",
-  "^sig_Lpsi",
-  c("^sig_Lomega", "^sig_Lpi"),
-  "^Pb[", 
-  "init_recruits", 
-  "^phi_Ma_O0", "^phi_Mb_Ma[.+,2]", "^phi_Pa_Mb[.+,1]", "^phi_Pa_Mb[.+,2]",
-  "^phi_O0_O1", "^phi_O1_O2", "^phi_O2_O3",
-  "^psi_O1_Rb", "^psi_O2_Rb", "O_phi_scaler_nat_hat"
-)
-
-# calculate the diagnostic statistics for each group
-diags = lapply(diag_params, function(param) as.matrix(post_summ(post, param, Rhat = T, neff = T)[c("mean", "Rhat", "neff"),]))
-
-# count up the number of parameters by group that fail to meet certain thresholds
-diag_summ = t(sapply(diags, function(param) {
-  c(
-    n_total = ncol(param),
-    n_Rhat_1 = sum(param["Rhat",] > 1.05),
-    n_Rhat_2 = sum(param["Rhat",] > 1.1),
-    n_Rhat_3 = sum(param["Rhat",] > 1.2),
-    n_neff_1 = sum(param["neff",] < 2000),
-    n_neff_2 = sum(param["neff",] < 1000),
-    n_neff_3 = sum(param["neff",] < 500)
+  # summarize the posteriors
+  diags = summarize_draws(post_sub, mean, ~quantile(.x, c(0.025, 0.975)), rhat, ess_mean, ~ess_quantile(.x, probs = c(0.025, 0.975)), mcse_mean, ~mcse_quantile(.x, probs = c(0.025, 0.975)))
+  
+  # discard any parameters that were the same value every MCMC iteration
+  # (will have an NA for rhat)
+  diags = diags[!is.na(diags$rhat),]
+  
+  # add "Monte Carlo CV"
+  diags$mccv_mean = diags$mcse_mean/diags$mean
+  diags$mccv_q2.5 = diags$mcse_q2.5/diags$`2.5%`
+  diags$mccv_q97.5 = diags$mcse_q97.5/diags$`97.5%`
+  
+  # summarize the summaries
+  out = data.frame(
+    L1 = L1,
+    L2 = L2,
+    L3 = L3,
+    match = params,
+    n_params = nrow(diags),
+    Rhat_1.05 = sum(diags$rhat >= 1.05),
+    Rhat_1.1 = sum(diags$rhat >= 1.1),
+    Rhat_1.2 = sum(diags$rhat >= 1.2),
+    ess_mean_400 = sum(diags$ess_mean < 400),
+    ess_q2.5_400 = sum(diags$ess_q2.5 < 400),
+    ess_q97.5_400 = sum(diags$ess_q97.5 < 400),
+    mccv_mean_0.05 = sum(diags$mccv_mean > 0.05),
+    mccv_q2.5_0.05 = sum(diags$mccv_q2.5 > 0.05),
+    mccv_q97.5_0.05 = sum(diags$mccv_q97.5 > 0.05)
   )
-}))
-
-# format to a table
-diag_summ = as.data.frame(diag_summ)
-colnames(diag_summ) = c("Total Params", ">1.05", ">1.1", ">1.2", "<3000", "<1000", "<500")
-df = cbind("Match" = unlist(lapply(diag_params, paste, collapse = ", ")), diag_summ)
-
-# render the table
-kable(df, align = "lccccccc") %>%
-  kable_styling(full_width = F, bootstrap_options = c("condensed", "striped")) %>%
-  add_header_above(c(" " = 2, "Rhat" = 3, "Neff" = 3)) %>%
-  column_spec(1, monospace = T) %>%
-  column_spec(c(2,5), border_right = T)
+  
+  # return the summarized summaries
+  return(out)
+}
 
 ```
 
-`r if (params$mcmc_plots) "## Diagnostic Plots {.tabset .tabset-pills}"`
+```{r calculate-mcmc-diagnostics}
+# parr recruitment
+L1 = "Parr Recruitment"
+L2 = c("BH Productivity", "BH Capacity", "Process SD", "Parr States")
+match = c("alpha", "^beta[", "sigma_Pb", "^Pb[")
+parr_recruit_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
 
-`r if (params$mcmc_plots) "### $\\alpha$, $\\beta$"`
+# LH apportionment
+L1 = "Life History Apportionment"
+L2 = c("Mean", "Process SD", "Realized")
+match = c("mu_pi[1,.]", "sig_Lpi", "^pi[.+,1,.]")
+pi_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
 
-```{r alpha-beta-diag-plots, eval = params$mcmc_plots, fig.width = 4, fig.height = 5}
-diag_plots(post, c("alpha", "beta"), layout = "2x1")
+# Overwinter survival
+L1 = "Overwinter Survival"
+L2 = c("Intercept", "Slope", "Process SD", "Realized")
+base = list("gamma0[LH_type,pop]", "gamma1[LH_type,pop]", "sig_Lphi_Pa_Mb[LH_type,pop]", "^phi_Pa_Mb[year,LH_type,pop]")
+match = sub_index(base, year = ".+", LH_type = i_fall, pop = ".")
+tmp1 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Fall Migrants")))
+match = sub_index(base, year = ".+", LH_type = i_spring, pop = ".")
+tmp2 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Spring Migrants")))
+phi_Pa_Mb_diags = rbind(tmp1, tmp2)
+
+# Migration survival: trib to LGR
+L1 = "Migration Survival (Trib to LGR)"
+L2 = c("Mean", "Process SD", "Realized")
+base = list("mu_phi_Mb_Ma[LH_type,origin,pop]", "sig_Lphi_Mb_Ma[LH_type,origin,pop]", "phi_Mb_Ma[year,LH_type,origin,pop]")
+match = sub_index(base, year = ".+", LH_type = i_spring, origin = o_nor, pop = ".")
+tmp1 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "NOR")))
+match = sub_index(base, year = ".+", LH_type = i_spring, origin = o_hor, pop = ".")
+tmp2 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "HOR")))
+phi_Mb_Ma_diags = rbind(tmp1, tmp2)
+
+# Migration survival: LGR to BON
+L1 = "Migration Survival (LGR to Ocean)"
+L2 = c("Mean", "Process SD", "Realized")
+base = c("mu_phi_Ma_O0[origin]", "sig_Lphi_Ma_O0[origin]", "phi_Ma_O0[year,origin]")
+match = sub_index(base, year = ".+", origin = o_nor)
+tmp1 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "NOR")))
+match = sub_index(base, year = ".+", origin = o_hor)
+tmp2 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "HOR")))
+phi_Ma_O0_diags = rbind(tmp1, tmp2)
+
+# Sex Apportionment
+L1 = "Sex Apportionment"
+L2 = c("Mean", "Process SD", "Realized")
+base = list("mu_omega[sex,origin,pop]", "sig_Lomega[origin,pop]", "omega[year,sex,origin,pop]")
+match = sub_index(base, year = ".+", sex = s_female, origin = o_nor, pop = ".")
+tmp1 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "NOR")))
+match = sub_index(base, year = ".+", sex = s_female, origin = o_hor, pop = ".")
+tmp2 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "HOR")))
+omega_diags = rbind(tmp1, tmp2)
+
+# Probability of Maturing at Age-3
+L1 = "Pr(Mature at Age-3)"
+L2 = c("Mean", "Process SD", "Realized")
+base = c("mu_psi_O1_Rb[sex,origin,pop]", "sig_Lpsi_O1_Rb[sex,origin,pop]", "psi_O1_Rb[.+,sex,origin,pop]")
+match = sub_index(base, year = ".+", sex = s_female, origin = o_nor, pop = ".")
+tmp1 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Female (NOR)")))
+match = sub_index(base, year = ".+", sex = s_female, origin = o_hor, pop = ".")
+tmp2 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Female (HOR)")))
+match = sub_index(base, year = ".+", sex = s_male, origin = o_nor, pop = ".")
+tmp3 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Male (NOR)")))
+match = sub_index(base, year = ".+", sex = s_male, origin = o_hor, pop = ".")
+tmp4 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Male (HOR)")))
+psi_O1_Rb_diags = rbind(tmp1, tmp2, tmp3, tmp4)
+
+# Probability of Maturing at Age-4
+L1 = "Pr(Mature at Age-4)"
+L2 = c("Mean", "Process SD", "Realized")
+base = c("mu_psi_O2_Rb[sex,origin,pop]", "sig_Lpsi_O2_Rb[sex,origin,pop]", "psi_O2_Rb[.+,sex,origin,pop]")
+match = sub_index(base, year = ".+", sex = s_female, origin = o_nor, pop = ".")
+tmp1 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Female (NOR)")))
+match = sub_index(base, year = ".+", sex = s_female, origin = o_hor, pop = ".")
+tmp2 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Female (HOR)")))
+match = sub_index(base, year = ".+", sex = s_male, origin = o_nor, pop = ".")
+tmp3 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Male (NOR)")))
+match = sub_index(base, year = ".+", sex = s_male, origin = o_hor, pop = ".")
+tmp4 = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i], L3 = "Male (HOR)")))
+psi_O2_Rb_diags = rbind(tmp1, tmp2, tmp3, tmp4)
+
+# Year 1 ocean survival
+L1 = "Year 1 Ocean Survival"
+L2 = c("Mean", "Process SD", "Realized")
+base = c("mu_phi_O0_O1[origin]", "sig_Lphi_O0_O1", "phi_O0_O1[year,origin]")
+match = sub_index(base, year = ".+", origin = o_nor)
+phi_O0_O1_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
+
+# Year 2 ocean survival
+L1 = "Year 2 Ocean Survival"
+L2 = c("Mean", "Process SD", "Realized")
+base = c("mu_phi_O1_O2[origin]", "sig_Lphi_O1_O2", "phi_O1_O2[year,origin]")
+match = sub_index(base, year = ".+", origin = o_nor)
+phi_O1_O2_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
+
+# Misc ocean survival
+L1 = "Misc Ocean Survival"
+L2 = c("NOR:HOR Scaler", "Year 0 Residual", "AR(1) Coefficient")
+match = c("O_phi_scaler_nat_hat", "Lphi_O0_O1_resid[5]", "kappa_phi_O0_O1")
+misc_ocean_surv_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
+
+# Pre-spawn Survival
+L1 = "Pre-spawn Survival"
+L2 = c("Mean", "Process SD", "Realized")
+match = c("mu_phi_Sb_Sa[.]", "sig_Lphi_Sb_Sa[.]", "phi_Sb_Sa[.+,.]")
+phi_Sb_Sa_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
+
+# Carcass Correction
+L1 = "Carcass Correction Factor"
+z_diags = diag_fn("z", L1 = L1)
+
+# Initial adult recruitment
+L1 = "Initial Adult Recruitment"
+L2 = c("Mean", "Process SD", "Realized")
+match = c("mu_init_recruits[.]", "sig_init_lrecruits[.]", "^init_recruits[.+,.]")
+init_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
+
+# Straying
+L1 = "Strays"
+L2 = c("Realized Number", "Age/Sex Comp")
+match = c("n_stray_tot[.+,.]", sub_index("stray_comp[age,sex,origin,pop]", age = ".", sex = ".", origin = o_hor, pop = "."))
+stray_diags = unlist_dfs(lapply(1:length(match), function(i) diag_fn(match[i], L1 = L1, L2 = L2[i])))
+
+# combine diagnostic summaries into one massive table
+diags_table = rbind(
+  parr_recruit_diags,
+  pi_diags,
+  phi_Pa_Mb_diags,
+  phi_Mb_Ma_diags,
+  phi_Ma_O0_diags,
+  omega_diags,
+  psi_O1_Rb_diags,
+  psi_O2_Rb_diags,
+  phi_O0_O1_diags,
+  phi_O1_O2_diags,
+  phi_Sb_Sa_diags,
+  misc_ocean_surv_diags,
+  z_diags,
+  init_diags,
+  stray_diags
+)
 ```
 
-`r if (params$mcmc_plots) "### $\\gamma$"`
+This table displays summaries of MCMC diagnostics for all unobserved stochastic nodes in the model. Values in cells represent the percentage of parameters of a given type that fail a diagnostic check. E.g., 50% in the "Rhat > 1.05" column means that half of the parameters of that type had Rhat values greater than 1.05. Cells with no color indicate no offense and darker reds indicate greater frequency of an offense.
 
-```{r gamma-diag-plots, eval = params$mcmc_plots, fig.width = 3, fig.height = 6}
-diag_plots(post, "gamma", layout = "4x1")
+* **Rhat** measures convergence of multiple chains to a common target distribution. Values close to 1 are ideal, greater than 1.1 are problematic but possibly passable, and greater than 1.2 should not be used for inference (general rules).
+* **ESS** measures the number of effective MCMC samples are available to estimate a given summary statistic of the posterior -- here the posterior mean and quantiles of the 95% equal-tailed CRI. Percentages shown represent the fraction of parameters that have fewer than 400 ESS -- which Vehtari et al. [2021](https://projecteuclid.org/journals/bayesian-analysis/advance-publication/Rank-Normalization-Folding-and-Localization--An-Improved-R%cb%86-for/10.1214/20-BA1221.full) suggest as a good rule of thumb.
+* **MCCV** is Monte Carlo Standard Error of a summary statistic divided by the estimated posterior summary statistic, intended to represent a measure of precision for estimating posterior summary statistics -- here the posterior mean and quantiles of the 95% equal-tailed CRI. Percentages shown represent the fraction of parameters that have greater than 5% MCCV -- which Staton has (arbitrarily and at this time) chosen as the greatest amount of acceptable imprecision.
+
+The calculations behind this table are implemented using the '[posterior](https://mc-stan.org/posterior/articles/posterior.html)' R package, which contains updated MCMC diagnostics (Vehtari et al. [2021](https://projecteuclid.org/journals/bayesian-analysis/advance-publication/Rank-Normalization-Folding-and-Localization--An-Improved-R%cb%86-for/10.1214/20-BA1221.full)).
+
+```{r mcmc-diag-table}
+# duplicate the diagnostic output
+kable_table = diags_table
+
+# order the rows
+kable_table$L1 = factor(kable_table$L1, levels = unique(kable_table$L1))
+kable_table = diags_table[order(kable_table$L1, kable_table$L2, kable_table$L3),]
+
+# keep only relevant columns for kable
+kable_table = kable_table[,-which(colnames(diags_table) %in% c("match", "mean_value", "Rhat_mean", "ess_bulk_mean"))]
+
+# convert counts of offending parameters to percentages
+kable_table$Rhat_1.05 = paste0(round(kable_table$Rhat_1.05/kable_table$n_params, 2) * 100, "%")
+kable_table$Rhat_1.1 = paste0(round(kable_table$Rhat_1.1/kable_table$n_params, 2) * 100, "%")
+kable_table$Rhat_1.2 = paste0(round(kable_table$Rhat_1.2/kable_table$n_params, 2) * 100, "%")
+kable_table$ess_mean_400 = paste0(round(kable_table$ess_mean_400/kable_table$n_params, 2) * 100, "%")
+kable_table$ess_q2.5_400 = paste0(round(kable_table$ess_q2.5_400/kable_table$n_params, 2) * 100, "%")
+kable_table$ess_q97.5_400 = paste0(round(kable_table$ess_q97.5_400/kable_table$n_params, 2) * 100, "%")
+kable_table$mccv_mean_0.05 = paste0(round(kable_table$mccv_mean_0.05/kable_table$n_params, 2) * 100, "%")
+kable_table$mccv_q2.5_0.05 = paste0(round(kable_table$mccv_q2.5_0.05/kable_table$n_params, 2) * 100, "%")
+kable_table$mccv_q97.5_0.05 = paste0(round(kable_table$mccv_q97.5_0.05/kable_table$n_params, 2) * 100, "%")
+
+# add basic formatting
+colnames(kable_table) = c("Model Component", "Parameter Type", "Group", "N", "> 1.05", "> 1.1", "> 1.2", "Mean", "q2.5", "q97.5", "Mean", "q2.5", "q97.5")
+kable_table$Group[is.na(kable_table$Group)] = " "
+kable_table$`Parameter Type`[is.na(kable_table$`Parameter Type`)] = " "
+
+assign_color = function(x, colors = c("white","red")) {
+  pal = colorRampPalette(colors)
+  cols = pal(6)
+  bin_names = levels(cut(rbeta(1e6, 1, 1) * 100, breaks = c(0,0.001,20,40,60,80,100), include.lowest = TRUE))
+  names(cols) = bin_names
+  bins = cut(x, breaks = c(0,0.001,20,40,60,80,100), include.lowest = TRUE)
+  cols_use = cols[as.character(bins)]
+  alpha(unname(cols_use), 0.5)
+}
+
+# produce the kable
+kable(kable_table, row.names = FALSE, align = c("lllcccccccccc")) %>%
+  kable_styling(full_width = TRUE, fixed_thead = TRUE, bootstrap_options = c("striped", "condensed")) %>%
+  add_header_above(c(" " = 4, "Rhat" = 3, "ESS < 400" = 3, "MCCV > 5%" = 3)) %>%
+  column_spec(2:3, width = "150px") %>%
+  column_spec(c(4,7,10), border_right = TRUE) %>%
+  column_spec(5, background = assign_color(as.numeric(stringr::str_remove(kable_table[,5], "%")))) %>%
+  column_spec(6, background = assign_color(as.numeric(stringr::str_remove(kable_table[,6], "%")))) %>%
+  column_spec(7, background = assign_color(as.numeric(stringr::str_remove(kable_table[,7], "%")))) %>%
+  column_spec(8, background = assign_color(as.numeric(stringr::str_remove(kable_table[,8], "%")))) %>%
+  column_spec(9, background = assign_color(as.numeric(stringr::str_remove(kable_table[,9], "%")))) %>%
+  column_spec(10, background = assign_color(as.numeric(stringr::str_remove(kable_table[,10], "%")))) %>%
+  column_spec(11, background = assign_color(as.numeric(stringr::str_remove(kable_table[,11], "%")))) %>%
+  column_spec(12, background = assign_color(as.numeric(stringr::str_remove(kable_table[,12], "%")))) %>%
+  column_spec(13, background = assign_color(as.numeric(stringr::str_remove(kable_table[,13], "%")))) %>%
+  collapse_rows(columns = 1:2)
 ```
 
-`r if (params$mcmc_plots) "### $\\mu$"`
 
-```{r mu-diag-plots, eval = params$mcmc_plots, fig.width = 7, fig.height = 7}
-diag_plots(post, "^mu", layout = "5x3")
+
+
+
+
 ```
 
-`r if (params$mcmc_plots) "### $\\sigma$"`
 
-```{r sig-diag-plots, eval = params$mcmc_plots, fig.width = 7, fig.height = 7}
-diag_plots(post, "^sig", layout = "5x3")
 ```
 
-`r if (params$mcmc_plots) "### init_recruits"`
 
-```{r init-recruits-diag-plots, eval = params$mcmc_plots, fig.width = 5, fig.height = 7}
-diag_plots(post, "init_recruits", layout = "4x2")
-```
 
-`r if (params$mcmc_plots) "### surv_scaler"`
-
-```{r surv-scaler-diag-plots, eval = params$mcmc_plots, fig.width = 6, fig.height = 4}
-diag_plots(post, "O_phi_scaler_nat_hat")
-```
-
-`r if (params$mcmc_plots) "### stray"`
-
-_There are some elements of both `n_stray_tot` and `stray_comp` that are exactly zero each MCMC iteration. These are omitted from the plots below._
-
-```{r stray-diag-plots, eval = params$mcmc_plots, fig.width = 7, fig.height = 7}
-stray = post_subset(post, "stray", T)
-non_zero_stray = apply(stray, 2, function(x) all(x != 0))
-stray_nodes = names(non_zero_stray)[non_zero_stray]
-diag_plots(post, stray_nodes, layout = "5x3")
 ```
 
 # Fit to Data {.tabset .tabset-pills}
